remove duplicated keyword

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "deine-Landschaft",
     "REST",
     "api",
-    "public",
-    "api"
+    "public"
   ],
   "author": "deine-Landschaft",
   "license": "GNU GPLv3",
