--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.2",
-    "uuid": "^7.0.3",
-    "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.0.7"
+    "uuid": "^7.0.3"
   }
 }
