--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon --exec babel-node src/app.js",
+    "dev-windows": "nodemon --exec ./node_modules/.bin/babel-node src/app.js",
     "test": "nodemon --exec babel-node src/swaggertest.js",
     "start": "node src/app.js -d"
   },
